--- a/ionic-assbook/src/app/app.component.html
+++ b/ionic-assbook/src/app/app.component.html
@@ -11,6 +11,10 @@
               <ion-icon aria-hidden="true" slot="start" [ios]="p.icon + '-outline'" [md]="p.icon + '-sharp'"></ion-icon>
               <ion-label>{{ p.title }}</ion-label>
             </ion-item>
+            <ion-item (click)="logout()" lines="none" detail="false">
+              <ion-icon slot="start" name="exit"></ion-icon>
+              <ion-label>Logout</ion-label>
+            </ion-item>
           </ion-menu-toggle>
         </ion-list>
 
